--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -46,12 +46,6 @@
     <Filter Include="Source Files\Components\Visual">
       <UniqueIdentifier>{952c6fe5-7ab9-449b-a46a-397cb483c6b9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Components\Core">
-      <UniqueIdentifier>{e11fdb0d-c36d-4fa9-80fa-2b8e34b3f918}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Components\Core">
-      <UniqueIdentifier>{d3e431f9-3a0f-4a6b-b6ca-3576f11f387e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\GameObjects\Debug">
       <UniqueIdentifier>{7ff0da42-541b-4bee-931c-f23166cfac67}</UniqueIdentifier>
     </Filter>
@@ -107,18 +101,6 @@
     <ClInclude Include="Model.h">
       <Filter>Header Files\Components\Visual</Filter>
     </ClInclude>
-    <ClInclude Include="Buffer.h">
-      <Filter>Header Files\Components\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Material.h">
-      <Filter>Header Files\Components\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>Header Files\Components\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Light.h">
-      <Filter>Header Files\Components\Core</Filter>
-    </ClInclude>
     <ClInclude Include="Screen.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
@@ -170,6 +152,9 @@
     <ClInclude Include="FreeCamera.h">
       <Filter>Header Files\GameObjects\Cameras</Filter>
     </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Animation.cpp">
@@ -195,18 +180,6 @@
     </ClCompile>
     <ClCompile Include="Model.cpp">
       <Filter>Source Files\Components\Visual</Filter>
-    </ClCompile>
-    <ClCompile Include="Material.cpp">
-      <Filter>Source Files\Components\Core</Filter>
-    </ClCompile>
-    <ClCompile Include="Texture.cpp">
-      <Filter>Source Files\Components\Core</Filter>
-    </ClCompile>
-    <ClCompile Include="Buffer.cpp">
-      <Filter>Source Files\Components\Core</Filter>
-    </ClCompile>
-    <ClCompile Include="Light.cpp">
-      <Filter>Source Files\Components\Core</Filter>
     </ClCompile>
     <ClCompile Include="glad.c">
       <Filter>Source Files\Main</Filter>
@@ -261,6 +234,9 @@
     </ClCompile>
     <ClCompile Include="FreeCamera.cpp">
       <Filter>Source Files\GameObjects\Cameras</Filter>
+    </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
